force-app/main/default/objects/Dan360_Remito__c/Dan360_Remito__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los remitos que se relacionan a un pedido</description>
    <label>Remito</label>
    <nameField>
        <displayFormat>Rem{0000}</displayFormat>
        <label>Nombre de Remito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>