force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerCode__c</fullName>
    <label>Customer code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>