force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_CustomerPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerPurchaseOrderNumber__c</fullName>
    <label>Customer Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>