force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Delivery__c</fullName>
    <externalId>true</externalId>
    <label>Delivery</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>