force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_Fecha__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Fecha__c</fullName>
    <description>Fecha del remito.</description>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>