force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Pedido__c</fullName>
    <description>Pedido al cual está relacionado el remito.</description>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Remitos</relationshipLabel>
    <relationshipName>Remitos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>