force-app/main/default/objects/Dan360_Remito__c/fields/Dan360_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sucursal asociada al remito</description>
    <label>Sucursal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remitos</relationshipLabel>
    <relationshipName>Remitos</relationshipName>
    <type>Lookup</type>
</CustomField>