force-app/main/default/objects/Dan360_Remito__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Delivery__c</columns>
    <columns>Dan360_Pedido__c</columns>
    <columns>Dan360_Sucursal__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>